@@ -2,21 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.7'
 	id 'io.spring.dependency-management' version '1.1.7'
-}
-
-group = 'in.techcamp'
-version = '0.0.1-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+	id 'application'
+	id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
 repositories {
@@ -24,16 +11,13 @@ repositories {
 }
 
 dependencies {
-	// Spring Boot dependencies
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// MyBatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
-
-	// Thymeleaf extras for Java 8 time
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
 
 	// Validation
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
@@ -46,28 +30,27 @@ dependencies {
 	// MySQL Connector/J
 	runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
 
-	// SLF4J & Logback
-	implementation 'org.slf4j:slf4j-api:2.0.7'
-	implementation 'ch.qos.logback:logback-classic:1.4.11'
+	// JavaFX
+	implementation 'org.openjfx:javafx-controls:23.0.1'
+	implementation 'org.openjfx:javafx-fxml:23.0.1'
+	implementation 'org.openjfx:javafx-web:23.0.1'
 
-	// Testing dependencies
-	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes Mockito and JUnit
-	testImplementation 'org.mockito:mockito-junit-jupiter'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
-	testImplementation 'com.h2database:h2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // JUnit + Mockito
+	testImplementation 'org.mockito:mockito-core:5.2.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+	testImplementation 'org.springframework.security:spring-security-test' // Security関連のテスト
 
-	// JUnit Platform Launcher
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
+	implementation 'io.github.cdimascio:dotenv-java:2.3.0'
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+javafx {
+	version = "23.0.1"
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
 }
 
-tasks.withType(JavaCompile) {
-	options.compilerArgs += ["--enable-preview"]
-}
-
-tasks.withType(Test) {
-	jvmArgs += ["--enable-preview"]
+application {
+	mainClass = 'in.techcamp.memoapp.MemoAppApplication'
 }
